# SnapQuote

./: .gitignore
api/: .gitignore  README.md  docker-compose.yml  fix_templates.js  fix_templates2.js  fix_templates3.js  fix_templates4.js  test_no_terms.js
api/docs/: architecture.md
api/node_server/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  test_firestore_dates.js  test_gemini_firestore.js  test_preview.js
api/node_server/src/: app.js
api/node_server/src/controllers/: quotesController.js
api/node_server/src/middlewares/: auth.js
api/node_server/src/routes/: quotes.js
api/node_server/src/views/: bold.ejs  classic.ejs  elegant.ejs  gallery.ejs  minimal.ejs  modern.ejs  premium.ejs
api/rust_engine/: .dockerignore  .env.example  Cargo.toml  Dockerfile
api/rust_engine/src/: db.rs  gemini.rs  main.rs  media.rs  models.rs  prompt.rs
app/: app.json  config.ts  firebaseConfig.ts  package-lock.json  package.json
app/app/: _layout.tsx  preview.tsx  settings.tsx
app/app/(auth)/: _layout.tsx  forgot-password.tsx  login.tsx  onboarding.tsx  setup.tsx  signup.tsx  verify.tsx  welcome.tsx
app/app/(tabs)/: _layout.tsx  index.tsx  profile.tsx  two.tsx
app/app/invoice/: [id].tsx
app/context/: AuthContext.tsx
app/data/: currencies.json
app/utils/: currency.ts
docs/: SNAPQUOTE_PRD.md
