[package]
name = "rust_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
dotenvy = "0.15.7"
firestore = "0.48.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
tokio = { version = "1.51.0", features = ["full"] }
uuid = { version = "1.23.0", features = ["v4"] }
